--- a/GoGreenV3/Views/Marker/Index.cshtml
+++ b/GoGreenV3/Views/Marker/Index.cshtml
@@ -6,59 +6,84 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Location)
-        </th>
-        <th></th>
-    </tr>
+<div class="row">
+    <div class="col-md-3 img-rounded" style="background-color: rgb(239, 234, 234); padding: 12px;">
+        @using (Html.BeginForm("Index", "Marker", FormMethod.Get, new { @class = "form-vertical" }))
+        {
+            @Html.TextBox("Query", null, new { @class = "form-control", placeholder = "Search" })
+            <p>
+                @Html.RadioButton("Filter", "All", true)
+                @Html.Label("All")
+                @Html.RadioButton("Filter", "Type")
+                @Html.Label("Type only")
+                @Html.RadioButton("Filter", "Location")
+                @Html.Label("Location only")
+            </p>
+            <p>
+                <input type="submit" class="btn btn-default" value="Search" />
+                <input type="submit" class="btn btn-default" value="Show All" onclick="document.getElementById('Query').value = '';" />
+            </p>
+        @*}*@
+        <hr />
+        @*@using (Html.BeginForm("Index", "Marker", FormMethod.Get, new { @class = "form-vertical" }))
+        {*@
+            <strong>Sort by:</strong>
+            <p>
+                @Html.RadioButton("SortBy", "Type", true)
+                @Html.Label("Type")
+                @Html.RadioButton("SortBy", "Location")
+                @Html.Label("Location")
+            </p>
+            <strong>Sort order:</strong>
+            <p>
+                @Html.RadioButton("SortOrder", "Ascending", true)
+                @Html.Label("Ascending")
+                @Html.RadioButton("SortOrder", "Descending")
+                @Html.Label("Descending")
+            </p>
+            <p>
+                <input type="submit" class="btn btn-default" value="Sort" />
+            </p>
+        }
+    </div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location)
-        </td>
-        <td>
-            <a href="@Url.Action("Edit", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
-                <span class="glyphicon glyphicon-pencil"></span>
-            </a>
-            <a href="@Url.Action("Details", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
-                <span class="glyphicon glyphicon-info-sign"></span>
-            </a>
-            <a href="@Url.Action("Delete", "Marker", new { id=item.Id })" class="btn btn-danger btn-sm">
-                <span class="glyphicon glyphicon-remove"></span>
-            </a>
-        </td>
-    </tr>
-}
+    <div class="col-md-9">
+        <p>
+            @Html.ActionLink("Create New", "Create")
+        </p>
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Type)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Location)
+                </th>
+                <th></th>
+            </tr>
 
-</table>
-
-@* CancelButton Modal *@
-<div class="modal fade" id="cancelButton" tabindex="-1" role="dialog" aria-labelledby="cancelLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="cancelHeader"><span class="glyphicon glyphicon-question-sign"></span> Cancel</h4>
-            </div>
-            <div class="modal-body">
-                Do you want to cancel adding of marker?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-                @Html.ActionLink("Yes", "Index", "Home", null, new { @class = "btn btn-default" })
-            </div>
-        </div>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Type)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Location)
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Edit", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </a>
+                        <a href="@Url.Action("Details", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
+                            <span class="glyphicon glyphicon-info-sign"></span>
+                        </a>
+                        <a href="@Url.Action("Delete", "Marker", new { id=item.Id })" class="btn btn-danger btn-sm">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </a>
+                    </td>
+                </tr>
+            }
+        </table>
     </div>
 </div>
