--- a/GoGreenV3/Views/Marker/Index.cshtml
+++ b/GoGreenV3/Views/Marker/Index.cshtml
@@ -30,7 +30,7 @@
             <p>
                 @Html.RadioButton("SortBy", "Default", true)
                 @Html.Label("Default")
-                @Html.RadioButton("SortBy", "Type", true)
+                @Html.RadioButton("SortBy", "Type")
                 @Html.Label("Type")
                 @Html.RadioButton("SortBy", "Location")
                 @Html.Label("Location")
@@ -74,7 +74,7 @@
                     </td>
                     <td class="text-nowrap">
                         @{ var itemInfo = item.Latitude + "," + item.Longitude + "," + item.Location; }
-                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#showMarkerOnMap" value="@item.Id" onclick="setMarkerLocation(@item.Id, '@item.Latitude', '@item.Longitude', '@item.Location');">Show on map</button>
+                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#showMarkerOnMap" value="@item.Id" onclick="setMarkerLocation(@item.Id, '@item.Latitude', '@item.Longitude', '@item.Location');"><span class="glyphicon glyphicon-map-marker"></span> Show on map</button>
                         <a href="@Url.Action("Edit", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
                             <span class="glyphicon glyphicon-pencil"></span> Edit
                         </a>
