--- a/GoGreenV3/Views/Shared/_Layout.cshtml
+++ b/GoGreenV3/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
                     <li>
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help <span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Terms and Conditions", "ToC", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         </ul>
