--- a/GoGreenV3/Views/Marker/Index.cshtml
+++ b/GoGreenV3/Views/Marker/Index.cshtml
@@ -74,7 +74,7 @@
                     </td>
                     <td class="text-nowrap">
                         @{ var itemInfo = item.Latitude + "," + item.Longitude + "," + item.Location; }
-                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#showMarkerOnMap" value="@item.Id" onclick="setMarkerLocation(@item.Id, '@item.Latitude', '@item.Longitude', '@item.Location');"><span class="glyphicon glyphicon-map-marker"></span> Show on map</button>
+                        <button type="button" id="showMarkerBtn" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#showMarkerOnMap" value="@item.Id" onclick="setMarkerLocation(@item.Id, '@item.Latitude', '@item.Longitude', '@item.Location');"><span class="glyphicon glyphicon-map-marker"></span> Show on map</button>
                         <a href="@Url.Action("Edit", "Marker", new { id=item.Id })" class="btn btn-primary btn-sm">
                             <span class="glyphicon glyphicon-pencil"></span> Edit
                         </a>
@@ -97,7 +97,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="showMarkerOnMapHeader">modalHeader</h4>
+                <h4 class="modal-title" id="showMarkerOnMapHeader">Marker</h4>
             </div>
             <div class="modal-body">
                 <div id="map" class="map-marker-index"></div>
