--- a/GoGreenV3/Views/Shared/_Layout.cshtml
+++ b/GoGreenV3/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="@Url.Action("Index", "Home")">
+                    <img alt="Brand" src="~/Images/logo.png" style="height: 62px; position: relative; top: -20px" />
+                </a>
                 @Html.ActionLink("GO GREEN", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
