--- a/GoGreenV3/Views/Agency/AgencyList.cshtml
+++ b/GoGreenV3/Views/Agency/AgencyList.cshtml
@@ -5,8 +5,17 @@
 }
 
 <h2>Agencies:</h2>
+<hr />
+<p>
+    @using (Html.BeginForm("AgencyList", "Agency", FormMethod.Get, new { @class = "form-vertical" }))
+    {
+        <input type="submit" class="btn btn-default pull-right" value="Show All" onclick="document.getElementById('Query').value = '';" />
+        <input type="submit" class="btn btn-default pull-right" style="margin-right: 2px;" value="Search" />
+        @Html.TextBox("Query", null, new { @class = "form-control pull-right", placeholder = "Search", style = "margin-right: 2px;" })
+    }
+</p>
 
-<table class="table">
+<table class="table table-bordered table-hover table-responsive table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
