--- a/GoGreenV3/Views/Agency/AgencyList.cshtml
+++ b/GoGreenV3/Views/Agency/AgencyList.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Agency List";
 }
 
-<h2>Agencies:</h2>
+<h2>Participating Agencies:</h2>
 <hr />
 <p>
     @using (Html.BeginForm("AgencyList", "Agency", FormMethod.Get, new { @class = "form-vertical" }))
@@ -15,7 +15,7 @@
     }
 </p>
 
-<table class="table table-bordered table-hover table-responsive table-striped">
+<table class="table table-bordered table-hover table-responsive table-striped table-responsive">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
